--- a/style.css
+++ b/style.css
@@ -36,9 +36,10 @@
 
 
 
-/* .hide {
-    visibility: hidden;
-} */
+.hide {
+    display: none;
+  
+}
 
 
 
@@ -55,7 +56,7 @@
     margin: auto;
     flex-direction: column;
     text-align: center;
-    z-index: 1;
+    
 }
 
 button {
@@ -94,14 +95,14 @@ h1{
 }
 
 #rulebox {
-    font-size: 0.5rem;
+    font-size: 0.8rem;
     margin-top: 50px;
     width: 600px;
     outline-style: double;
     padding: 30px;
     align-items: center;
     transform: translate(-50%, -50%) scale(0.9);
-    opacity: 0;
+    /* opacity: 0; */
     pointer-events: none;
     transition: all 0.3s ease;
     
@@ -122,7 +123,7 @@ h1{
     outline-style: double;
     padding: 30px;
     align-items: center;
-    display: none;
+    /* display: none; */
 }
 
 #score {
@@ -136,16 +137,17 @@ h1{
     outline-style: double;
     padding: 30px;
     align-items: center;
-    display: none;
+    /* display: none; */
 }
 
 #timer{
-    width: 80px;
+    width: 400px;
     height: 80px;
     outline-style: dashed;
-    border-radius: 50%;
+    border-radius: 3px;
     margin: auto;
     padding: 15px;
+    font-size: 25px;
    
     
 }
